--- a/FUNDING.yml
+++ b/FUNDING.yml
@@ -9,4 +9,5 @@ community_bridge: # Replace with a single Community Bridge project-name e.g., cl
 liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
-custom: ['https://slime-hatena.github.io/webclap/?source=github']
+custom: ['https://git.io/clap.slime-hatena.g']
+
